[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/Bat.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 96 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Bat" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
speed = 600

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="Detectionbox" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="Collider" type="CollisionShape2D" parent="Detectionbox"]
position = Vector2( 512, 96 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.196078, 0.180392, 0.380392, 1 )
texture = ExtResource( 1 )

[node name="Wing2" type="Sprite" parent="."]
modulate = Color( 0.435294, 0.0901961, 0.941176, 0.878431 )
position = Vector2( -40, -24 )
rotation = -0.596903
texture = ExtResource( 1 )

[node name="Wing" type="Sprite" parent="."]
modulate = Color( 0.435294, 0.0901961, 0.941176, 0.878431 )
position = Vector2( 48, -24 )
rotation = 0.597731
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Detectionbox" to="." method="_on_Detectionbox_body_entered"]
